2003-09-12  Pavel Roskin  <proski@gnu.org>

	* dlg.c: DLG_BACKWARD now affects how the dialog is populated by
	widgets, not the runtime behavior.
	(init_dlg): Don't change current widget.  This allows using
	dlg_select_widget() before the dialog is run.
	* dlg.h: Remove initfocus field.
	* wtools.c (query_dialog): Use dlg_select_widget(), not
	initfocus to set the initial widget.

	* widget.c (input_callback): Don't handle Enter.
	Requested by Ali Akcaagac <aliakc@web.de>

	* chmod.c (chmod_callback): Fix uninitialized variable.

2003-09-11  Pavel Roskin  <proski@gnu.org>

	* main.c (midnight_callback): Don't redraw dirty panels if the
	menubar is active.

	* dlg.c (add_widget): New, safer implementation.  Don't rely on
	the position of the first widget.  Disable insertion into
	running dialogs - it's unused and cannot be tested.

	* boxes.c (symlink_dialog): Add "OK" and "Cancel" buttons.
	Don't translate strings, it's done in quick_dialog().
	Reported by Ali Akcaagac <aliakc@web.de>

2003-09-10  Pavel Roskin  <proski@gnu.org>

	* dlg.h: Remove "last" field from Dlg_head, it's unneeded in a
	circularly linked list.

	* screen.c (paint_dir): Don't make panel clean here.
	(panel_update_contents): Do it here.
	(panel_callback): Repaint the panel on focus.
	(select_item): Don't paint anything here.

	* dlg.h (send_message): Use cb_ret_t and widget_msg_t.

	* main.c (menu_cmd): If the current panel is inactive, use the
	opposite side to start menu.

	* dlg.h: Use cb_ret_t and widget_msg_t in widget callbacks.
	Massive adjustment for the above.

	* chmod.c (chmod_toggle_select): Get id as argument.

	* dlg.h: Remove restroy callback.  Widgets should use
	WIDGET_DESTROY.  Adjust all dependencies.

	* dlg.c: Don't supply ID of the current widget with any
	callbacks.  It's mostly useless and can be found by the
	callback.
	* layout.c: Likewise.
	* widget.c: Likewise.
	* chmod.c (chmod_callback): Adjust for the above.

	* layout.c (layout_change): Make static.