@@ -195,7 +195,7 @@ init_chmod (void)
     ch_dlg =
 	create_dlg (0, 0, 22 - single_set, 70, dialog_colors,
 		    chmod_callback, "[Chmod]", _("Chmod command"),
-		    DLG_CENTER);
+		    DLG_CENTER | DLG_REVERSE);
 
     for (i = 0; i < BUTTONS; i++) {
 	if (i == 2 && single_set)
