@@ -248,7 +248,7 @@ init_learn (void)
 
     learn_dlg =
 	create_dlg (0, 0, 23, 78, dialog_colors, learn_callback,
-		    "[Learn keys]", learn_title, DLG_CENTER);
+		    "[Learn keys]", learn_title, DLG_CENTER | DLG_REVERSE);
 
     for (i = 0; i < BUTTONS; i++)
 	add_widget (learn_dlg,
