@@ -2625,7 +2625,7 @@ view (const char *_command, const char *_file, int *move_dir_p, int start_line)
     /* Create dialog and widgets, put them on the dialog */
     view_dlg =
 	create_dlg (0, 0, LINES, COLS, NULL, view_dialog_callback,
-		    "[Internal File Viewer]", NULL, DLG_NONE);
+		    "[Internal File Viewer]", NULL, DLG_REVERSE);
 
     wview = view_new (0, 0, COLS, LINES - 1, 0);
 
